versions/3.4.0/docs/Parameters.md
# ElementsSDK.Model.Parameters

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Analytics** | **bool** |  | [optional] 
**BrandingCss** | **string** |  | [optional] 
**BrandingLogo** | **string** |  | [optional] 
**ExternalUrl** | **string** | http://host/ | [optional] 
**FileManagerRecycleBin** | **bool** | Recycle bins are usually either in Workspace/Share or Volume folder | [optional] 
**HttpsRedirect** | **string** |  | [optional] 
**Language** | **string** |  | [optional] 
**LtfsDefaultRestoreToOriginalLocation** | **bool** |  | [optional] 
**LtfsDefaultSearchDirectories** | **bool** |  | [optional] 
**LtfsLibraryAddress** | **string** |  | [optional] 
**MailStyling** | **Dictionary&lt;string, string&gt;** |  | [optional] 
**MediaAutoPlay** | **bool** |  | [optional] 
**MediaAutoProxy** | **bool** |  | [optional] 
**MediaAutoScan** | **bool** |  | [optional] 
**MediaAutoTransport** | **bool** |  | [optional] 
**MediaAutoVeritoneUpload** | **bool** |  | [optional] 
**MediaDefaultCustomFieldType** | **string** |  | [optional] 
**MediaDefaultDeleteBehaviour** | **string** |  | [optional] 
**MediaForceShowDeleted** | **bool?** |  | [optional] 
**MediaKeepSelectionWhenBrowsing** | **bool** |  | [optional] 
**MediaRecycleBin** | **bool** | Recycle bin is usually in the .recycle-bin folder in the volume root | [optional] 
**NtpOfferSync** | **bool** |  | [optional] 
**OtpPolicy** | **string** |  | [optional] 
**TasksRunScheduled** | **bool** |  | [optional] 
**UsersDefaultPermissions** | **string** | Copy this value from an existing user | [optional] 
**WorkspacesFolderTemplatePath** | **string** |  | [optional] 
**WorkspacesPath** | **string** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)

