versions/3.4.0-beta.1/docs/Parameters.md
# ElementsSDK.Model.Parameters

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | **int** |  | [optional] [readonly] 
**Analytics** | **bool** |  | [optional] 
**IdentifyCommand** | **string** |  | [optional] 
**ExternalUrl** | **string** | http://host/ | [optional] 
**BrandingCss** | **string** |  | [optional] 
**BrandingLogo** | **string** |  | [optional] 
**FmNewDirectoryMode** | **string** |  | [optional] 
**IcapServer** | **string** |  | [optional] 
**IcapPort** | **int** |  | [optional] 
**IcapService** | **string** |  | [optional] 
**IcapScanUploads** | **bool** |  | [optional] 
**LtfsDefaultRestoreToOriginalLocation** | **bool** |  | [optional] 
**LtfsDefaultSearchDirectories** | **bool** |  | [optional] 
**LtfsLibraryAddress** | **string** |  | [optional] 
**MediaAutoPlay** | **bool** |  | [optional] 
**MediaAutoTransport** | **bool** |  | [optional] 
**MediaAutoScan** | **bool** |  | [optional] 
**MediaAutoProxy** | **bool** |  | [optional] 
**MediaAutoVeritoneUpload** | **bool** |  | [optional] 
**MediaProxyH264Preset** | **string** |  | [optional] 
**MediaDefaultCustomFieldType** | **string** |  | [optional] 
**MediaForceShowDeleted** | **bool?** |  | [optional] 
**MediaDefaultDeleteBehaviour** | **string** |  | [optional] 
**MediaRecycleBin** | **bool** | Recycle bin is usually in the .recycle-bin folder in the volume root | [optional] 
**FileManagerRecycleBin** | **bool** | Recycle bins are usually either in Workspace/Share or Volume folder | [optional] 
**NtpOfferSync** | **bool** |  | [optional] 
**SlugifyWorkspacePath** | **bool** | Affects new workspaces only | [optional] 
**SlugifyShares** | **bool** | Requires | [optional] 
**SmtpFrom** | **string** |  | [optional] 
**SmtpServer** | **string** |  | [optional] 
**SmtpPort** | **int** |  | [optional] 
**SmtpTls** | **string** |  | [optional] 
**SmtpUsername** | **string** |  | [optional] 
**SmtpEhlo** | **string** |  | [optional] 
**MailStyling** | **string** |  | [optional] 
**TasksLimit** | **int** |  | [optional] 
**TasksHardLimit** | **int** |  | [optional] 
**UmaskAfp** | **string** |  | [optional] 
**UmaskSmb** | **string** |  | [optional] 
**UsersDefaultPermissions** | **string** | Copy this value from an existing user | [optional] 
**WorkspacesFolderTemplatePath** | **string** |  | [optional] 
**WorkspacesMode** | **string** |  | [optional] 
**WorkspacesPath** | **string** |  | [optional] 
**Language** | **string** |  | [optional] 
**EmailLogoUrl** | **string** |  | [optional] 
**MediaKeepSelectionWhenBrowsing** | **bool** |  | [optional] 
**TasksRunScheduled** | **bool** |  | [optional] 
**HttpsRedirect** | **string** |  | [optional] 
**SslCertificate** | **string** |  | [optional] 
**SslCertificateKey** | **string** |  | [optional] 
**OtpPolicy** | **string** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)

